--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.YazilimLAB">
         <activity
+            android:name=".Catogery.DgsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Catogery.CapActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Catogery.YatayGecisActivity"
+            android:exported="true" />
+        <activity
             android:name=".Catogery.IntibakActivity"
             android:exported="true" />
         <activity
